fix some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -226,7 +226,6 @@ body {
   padding-top: 7rem;
   min-height: 100vh;
   height: auto;
-  width: 100vw;
   background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.75), rgba(255, 255, 255, 0.5)), url(../img/tinymoon.jpg);
   background-size: cover;
   background-position: top;
@@ -239,11 +238,12 @@ body {
   display: flex;
   justify-content: space-evenly;
   height: auto;
+  min-height: 100vh;
+  padding-bottom: 2rem;
   background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.75), rgba(255, 255, 255, 0.5)); }
 
-.section-av {
-  height: auto;
-  background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0.5)); }
+.section-music {
+  height: auto; }
 
 .card {
   width: 25rem;
@@ -346,7 +346,8 @@ body {
 
 .newspaper__popout-container {
   padding: 9rem 0 2rem 0;
-  display: none; }
+  display: none;
+  height: 100vh; }
 
 .music {
   min-height: 100vh;
